--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
       </nav>
       <nav class="airpods-navbar">
         <div class="nav-content">
-          <div class="nav-logo"><a href="#">AirPods Pro</a></div>
+          <div class="nav-logo"><a href="#">Personalized Music </a></div>
           <ul class="nav-items">
-            <li><button disabled>Overview</button></li>
-            <li><button>Tech Specs</button></li>
-            <li><button>Compare</button></li>
-            <li><button class="buy-btn">Buy</button></li>
+            <li><button class="buy-btn">【7450小组1】</button></li>
+            <li><button >熊强</button></li>
+            <li><button>孙多良</button></li>
+            <li><button>高瑜</button></li>
+            <li><button>殷湘程</button></li>
           </ul>
         </div>
       </nav>
@@ -78,108 +79,108 @@
 
       <section class="section-02 scroll-section head-bob-turn">
         <div class="msg-elem">
-          <small>Comfort</small>
-          <h2>Arrival of the fittest.</h2>
+          <small>好戏</small>
+          <h2>即将开幕</h2>
         </div>
         <div class="canvas-elem">
           <canvas id="head-bob-turn"></canvas>
         </div>
       </section>
 
-      <section class="section-04 static-section explode-tips">
-        <div class="section-04-1">
-          <img
-            src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0000.jpg"
-            alt=""
-          />
-          <div class="text">
-            We refined the details of comfort, creating a new class of in-ear
-            headphones with a customisable fit that forms an exceptional seal
-            for Active Noise Cancellation. You'll feel your music, not your
-            headphones.
-          </div>
-        </div>
+<!--       <section class="section-04 static-section explode-tips"> -->
+<!--         <div class="section-04-1"> -->
+<!--           <img -->
+<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0000.jpg" -->
+<!--             alt="" -->
+<!--           /> -->
+<!--           <div class="text"> -->
+<!--             We refined the details of comfort, creating a new class of in-ear -->
+<!--             headphones with a customisable fit that forms an exceptional seal -->
+<!--             for Active Noise Cancellation. You'll feel your music, not your -->
+<!--             headphones. -->
+<!--           </div> -->
+<!--         </div> -->
 
-        <div class="section-04-2">
-          <img
-            src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0080.jpg"
-            alt=""
-          />
-          <div class="text">
-            Choose from three sizes of soft, flexible silicone tips that click
-            into place. Find the best fit — and get the best sound — by using
-            the Ear Tip Fit Test.
-          </div>
-        </div>
+<!--         <div class="section-04-2"> -->
+<!--           <img -->
+<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0080.jpg" -->
+<!--             alt="" -->
+<!--           /> -->
+<!--           <div class="text"> -->
+<!--             Choose from three sizes of soft, flexible silicone tips that click -->
+<!--             into place. Find the best fit — and get the best sound — by using -->
+<!--             the Ear Tip Fit Test. -->
+<!--           </div> -->
+<!--         </div> -->
 
-        <div class="section-04-3">
-          <img
-            src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0138.jpg"
-            alt=""
-          />
-          <div class="text">
-            These internally tapered tips conform to your ear shape, keeping
-            AirPods Pro secure. And with vents helping equalise pressure, you
-            feel like there's nothing in your ears.
-          </div>
-        </div>
-      </section>
+<!--         <div class="section-04-3"> -->
+<!--           <img -->
+<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0138.jpg" -->
+<!--             alt="" -->
+<!--           /> -->
+<!--           <div class="text"> -->
+<!--             These internally tapered tips conform to your ear shape, keeping -->
+<!--             AirPods Pro secure. And with vents helping equalise pressure, you -->
+<!--             feel like there's nothing in your ears. -->
+<!--           </div> -->
+<!--         </div> -->
+<!--       </section> -->
 
-      <section class="section-05 static-section flip-for-nc">
-        <div class="section-05-1">
-          <img
-            src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/05-flip-for-nc/0026.jpg"
-            alt=""
-          />
-          <div class="text">
-            <p>Active Noise Cancellation</p>
-            <h1>
-              Sound that cuts <br />
-              out the noise.
-            </h1>
-          </div>
-        </div>
+<!--       <section class="section-05 static-section flip-for-nc"> -->
+<!--         <div class="section-05-1"> -->
+<!--           <img -->
+<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/05-flip-for-nc/0026.jpg" -->
+<!--             alt="" -->
+<!--           /> -->
+<!--           <div class="text"> -->
+<!--             <p>Active Noise Cancellation</p> -->
+<!--             <h1> -->
+<!--               Sound that cuts <br /> -->
+<!--               out the noise. -->
+<!--             </h1> -->
+<!--           </div> -->
+<!--         </div> -->
 
-        <div class="section-05-2">
-          <img
-            src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/05-flip-for-nc/0054.jpg"
-            alt=""
-          />
-          <div class="text">
-            AirPods Pro are the only in-ear headphones with Active Noise
-            Cancellation that continuously adapts to the geometry of your ear
-            and the fit of the ear tips — blocking out the world so you can
-            focus on what you're listening to.
-          </div>
-        </div>
-      </section>
+<!--         <div class="section-05-2"> -->
+<!--           <img -->
+<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/05-flip-for-nc/0054.jpg" -->
+<!--             alt="" -->
+<!--           /> -->
+<!--           <div class="text"> -->
+<!--             AirPods Pro are the only in-ear headphones with Active Noise -->
+<!--             Cancellation that continuously adapts to the geometry of your ear -->
+<!--             and the fit of the ear tips — blocking out the world so you can -->
+<!--             focus on what you're listening to. -->
+<!--           </div> -->
+<!--         </div> -->
+<!--       </section> -->
 
-      <section class="section-06 static-section transparency-head">
-        <img
-          src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/06-transparency-head/0008.jpg"
-          alt=""
-        />
-        <div class="text">
-          <p>
-            Want to hear what's happening around you? Just press and hold the
-            force sensor on the stem to move between Active Noise Cancellation
-            and Transparency mode — which lets outside sound in, and allows
-            things to sound and feel natural when you're talking to people
-            nearby.
-          </p>
-          <p>
-            And when you're talking face to face with someone in a noisy
-            environment, Conversation Boost helps you hear more clearly by
-            focusing on the sound of the person directly in front of you.
-          </p>
-        </div>
-      </section>
+<!--       <section class="section-06 static-section transparency-head"> -->
+<!--         <img -->
+<!--           src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/06-transparency-head/0008.jpg" -->
+<!--           alt="" -->
+<!--         /> -->
+<!--         <div class="text"> -->
+<!--           <p> -->
+<!--             Want to hear what's happening around you? Just press and hold the -->
+<!--             force sensor on the stem to move between Active Noise Cancellation -->
+<!--             and Transparency mode — which lets outside sound in, and allows -->
+<!--             things to sound and feel natural when you're talking to people -->
+<!--             nearby. -->
+<!--           </p> -->
+<!--           <p> -->
+<!--             And when you're talking face to face with someone in a noisy -->
+<!--             environment, Conversation Boost helps you hear more clearly by -->
+<!--             focusing on the sound of the person directly in front of you. -->
+<!--           </p> -->
+<!--         </div> -->
+<!--       </section> -->
     </main>
 
     <footer>
       <div class="content">
-        <small>Copyright © 2022 Apple Inc. All rights reserved.</small>
-        <small>India.</small>
+        <small>Copyright © 2024 UIC IMS -> </small>
+        <small>CHINA.</small>
       </div>
     </footer>
   </body>
@@ -197,4 +198,53 @@
   <script src="js/script.js"></script>
   <script src="js/script1.js"></script>
   <script src="js/script2.js"></script>
+  <script >
+
+  document.addEventListener('DOMContentLoaded', function() {
+    let hasTriggered = false; // 标志位，用于判断是否已经跳转
+
+    window.addEventListener('scroll', function() {
+      // 获取窗口的滚动位置
+      var scrollTop = (document.documentElement.scrollTop || document.body.scrollTop) + window.innerHeight;
+      // 获取文档的高度
+      var docHeight = document.documentElement.scrollHeight;
+
+      // 判断是否滚动到了页面底部，并且还没有触发过跳转
+      if (scrollTop >= docHeight && !hasTriggered) {
+        hasTriggered = true; // 设置标志位为已跳转
+
+        // 当滚动到底部时，延迟执行页面跳转
+        setTimeout(function() {
+          window.location.href = 'one-music-gh-pages/index1.html'; // 替换为你要跳转的URL
+        }, 1000);
+      }
+    });
+  });
+
+  // 监听 popstate 事件，以便处理后退按钮
+window.addEventListener('popstate', function(event) {
+  // window.scrollTo(0, 0);
+  // 获取滚动位置信息
+  const scrollPos = localStorage.getItem('scrollPos');
+
+  if (scrollPos) {
+    try {
+      // 解析存储的滚动位置信息
+      const pos = JSON.parse(scrollPos);
+
+      // 滚动到指定位置
+      window.scrollTo(0, 0); // 修正参数顺序
+
+      localStorage.removeItem('scrollPos');
+      // 移除存储的信息
+    } catch (error) {
+      console.error('解析滚动位置信息失败:', error);
+      // 处理解析失败的情况，例如记录错误日志或重置状态
+    }
+  }
+});
+
+
+
+  </script>
 </html>
