多个页面实现播放功能

--- a/one-music-gh-pages/blog.html
+++ b/one-music-gh-pages/blog.html
@@ -101,9 +101,10 @@
                                     </div>
 
                                     <!-- Cart Button -->
-                                    <div class="cart-btn">
-                                        <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
-                                    </div>
+                                  <div class="cart-btn">
+                                    <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
+                                    <button class="toggle-audio">Pause</button>
+                                  </div>
                                 </div>
                             </div>
                             <!-- Nav End -->
@@ -383,6 +384,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/plugins/plugins.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
+    <script src="js/autoplay.js"></script>
 </body>
 
 </html>
