--- a/one-music-gh-pages/login.html
+++ b/one-music-gh-pages/login.html
@@ -100,10 +100,10 @@
                                         <a href="login.html" id="loginBtn">Login / Register</a>
                                     </div>
 
-                                    <!-- Cart Button -->
-                                    <div class="cart-btn">
-                                        <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
-                                    </div>
+                                  <div class="cart-btn">
+                                    <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
+                                    <button class="toggle-audio">Pause</button>
+                                  </div>
                                 </div>
                             </div>
                             <!-- Nav End -->
@@ -192,6 +192,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/plugins/plugins.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
+    <script src="js/autoplay.js"></script>
 </body>
 
 </html>
