--- a/one-music-gh-pages/albums-store.html
+++ b/one-music-gh-pages/albums-store.html
@@ -442,7 +442,7 @@
                                 <p>01. Main Hit Song</p>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/we are the world.mp3">
+                                <source src="audio/we_are_the_world.mp3">
                             </audio>
                         </div>
                     </div>
@@ -459,7 +459,7 @@
                                 <p>01. Main Hit Song</p>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/we are the world.mp3">
+                                <source src="audio/we_are_the_world.mp3">
                             </audio>
                         </div>
                     </div>
@@ -476,7 +476,7 @@
                                 <p>01. Main Hit Song</p>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/we are the world.mp3">
+                                <source src="audio/we_are_the_world.mp3">
                             </audio>
                         </div>
                     </div>
@@ -493,7 +493,7 @@
                                 <p>01. Main Hit Song</p>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/we are the world.mp3">
+                                <source src="audio/we_are_the_world.mp3">
                             </audio>
                         </div>
                     </div>
