--- a/index.html
+++ b/index.html
@@ -6,34 +6,13 @@
     <title>Airpods Pro - Apple (IN) | Anushka Chauhan</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
       <nav class="apple-navbar">
         <div class="nav-content">
-          <ul class="nav-items">
-            <li>
-              <a href=""><ion-icon name="logo-apple"></ion-icon></a>
-            </li>
-            <li><a href="">Store</a></li>
-            <li><a href="">Mac</a></li>
-            <li><a href="">iPad</a></li>
-            <li><a href="">iPhone</a></li>
-            <li><a href="">Watch</a></li>
-            <li><a href="">AirPods</a></li>
-            <li><a href="">TV & Home</a></li>
-            <li><a href="">Only on Apple</a></li>
-            <li><a href="">Accessories</a></li>
-            <li><a href="">Support</a></li>
-            <li>
-              <a href=""><ion-icon name="search-outline"></ion-icon></a>
-            </li>
-            <li>
-              <a href=""><ion-icon name="bag-outline"></ion-icon></a>
-            </li>
-          </ul>
         </div>
       </nav>
       <nav class="airpods-navbar">
