--- a/one-music-gh-pages/index1.html
+++ b/one-music-gh-pages/index1.html
@@ -20,15 +20,15 @@
 </head>
 
 <body>
-<iframe id="hiddenAudioPlayer" src="player.html" style="display:none;"></iframe>
+<!-- <iframe id="hiddenAudioPlayer" src="player.html" style="display:none;"></iframe> -->
 
-<script>
-// 页面加载完成后加载隐藏的iframe
-document.addEventListener('DOMContentLoaded', function () {
-  var hiddenAudioPlayer = document.getElementById('hiddenAudioPlayer')
-  hiddenAudioPlayer.src = 'player.html'
-})
-</script>
+<!-- <script> -->
+<!-- // 页面加载完成后加载隐藏的iframe -->
+<!-- document.addEventListener('DOMContentLoaded', function () { -->
+<!--   var hiddenAudioPlayer = document.getElementById('hiddenAudioPlayer') -->
+<!--   hiddenAudioPlayer.src = 'player.html' -->
+<!-- }) -->
+<!-- </script> -->
 <!-- Preloader -->
 <div class="preloader d-flex align-items-center justify-content-center">
   <div class="lds-ellipsis">
@@ -917,7 +917,7 @@ document.addEventListener('DOMContentLoaded', function () {
 <script src="js/plugins/plugins.js"></script>
 <!-- Active js -->
 <script src="js/active.js"></script>
-<!--     <script src="js/autoplay.js"></script> -->
+    <script src="js/autoplay.js"></script>
 <script>
 // 页面加载时执行
 window.addEventListener('load', function () {
