--- a/one-music-gh-pages/index1.html
+++ b/one-music-gh-pages/index1.html
@@ -112,7 +112,7 @@
                 <!-- Cart Button -->
                 <div class="cart-btn">
                   <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
-                  <button class="toggle-audio">Pause</button>
+                  <button class="toggle-audio">Stop</button>
                 </div>
               </div>
             </div>
